# bri-bri-bikus-b2b

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
apis/b2c/orders/: openapi.yaml
app/: addresses.py  auth.py  b2b_client.py  banners.py  cart.py  categories.py  collections.py  config.py  errors.py  favorites.py  jobs.py  main.py  orders.py  product_events.py  query_parsing.py  serializers.py  subscriptions.py
app/routes/: b2b_events.py  banners.py  cart.py  categories.py  collections.py  facets.py  favorites.py  orders.py  products.py
docs/adr/: 0001-facets-computation.md  0002-text-search.md  0003-public-product-view.md  0004-similar-products.md  0005-categories-hierarchy.md
migrations/: env.py  script.py.mako
migrations/versions/: 20260531_0001_create_favorites.py  20260531_0002_create_product_subscriptions.py  20260531_0003_create_cart_items.py  20260601_0004_create_banners.py  20260601_0005_create_collections.py  20260609_0006_rename_subscription_events.py  20260609_0007_update_banner_placement_to_catalog.py  20260609_0008_create_orders.py  20260611_0009_order_address_snapshot.py  20260621_0010_b2b_events.py
neomarket-canon/apis/b2c/cart/: openapi.yaml
neomarket-canon/apis/b2c/orders/: openapi.yaml
tests/: conftest.py  test_b2b_events.py  test_banners.py  test_cart.py  test_catalog.py  test_categories.py  test_collections.py  test_favorites.py  test_fulfill.py  test_orders.py  test_orders_cancel.py  test_orders_list.py  test_product_card.py  test_search.py  test_similar.py
